# jpeg-decoder

./: CMakeLists.txt  decoder.cpp  decoder.h  dev_test.cpp  dot.dot  image.h  libjpg_reader.h  png_encoder.h  readme.md  test.cpp  test.txt  test_baseline.cpp  test_commons.h  test_progressive.cpp
